portfolio-ui-isssues_and_alignemnt issues

--- a/mithun-portfolio/src/styles/globals.css
+++ b/mithun-portfolio/src/styles/globals.css
@@ -39,7 +39,7 @@ p {
   font-weight: 700;
   color: var(--background);
   line-height: 1.1;
-  border-radius: 50px;
+  border-radius: 12px;
   display: inline-block;
   background-color: var(--black-clr);
   padding: 16px 32px;
@@ -52,7 +52,7 @@ p {
   font-weight: 700;
   color: var(--black-clr);
   line-height: 1;
-  border-radius: 50px;
+  border-radius: 4px;
   display: inline-block;
   background-color: var(--background);
   border: 1px solid var(--black-clr);
